--- a/LevelOne/LevelOne.css
+++ b/LevelOne/LevelOne.css
@@ -1,26 +1,22 @@
-h1{
-    color:black;
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
+h1 {
+  color: black;
 }
 
-.playerdiv {
-  width: 50px;
-  height: 50px;
-  background: red;
-  border: black solid 1px;
+* {
+  text-align: center;
+  font-family: Roboto;
+  font-weight: bolder;
 }
 
-.bordertest {
-   width: 300px;
-   height: 60px;
-   background: Aqua;
-   border: green solid 1px;
-   position: absolute;
-   top: 200px;
-   left: 200px;
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, calc(-50% - 60px));
+  transform: translate(-50%, calc(-50% - 60px));
 }
 
-.edge {
-  width: 800px;
-  height: 600px;
-  border: black solid 3px;
+.center canvas {
+  border: 3px solid black;
 }
